@@ -1,4 +1,4 @@
-@set UPDATED 16 November 2013
-@set UPDATED-MONTH November 2013
+@set UPDATED 8 February 2014
+@set UPDATED-MONTH February 2014
 @set EDITION 3.0.14-rc0
 @set VERSION 3.0.14-rc0
