@@ -1,3 +1,9 @@
+2014-03-01  Anthony Green  <green@moxielogic.com>
+
+	* Makefile.am (EXTRA_DIST): Replace old scripts with
+	generate-darwin-source-and-headers.py.
+	* Makefile.in: Rebuilt.
+
 2014-02-28  Anthony Green  <green@moxielogic.com>
 
 	* Makefile.am (AM_CFLAGS): Reintroduce missing -DFFI_DEBUG for
